[metadata]
name = python-cephclient
summary = A client library in python for the Ceph REST API.
description-file =
    README.md
license = Apache License, Version 2.0
author = David Moreau Simard
author-email = moi@dmsimard.com
home-page = https://github.com/dmsimard/python-cephclient
keywords = ceph rest api ceph-rest-api client library
install_requires =
    lxml>=3.2.5
classifier =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Programming Language :: Python :: 2.7
    Topic :: Utilities

[files]
packages =
    cephclient